[package]
name = "rusty-scheduler"
version = "0.1.1"
authors = ["Scotch101Tape <scotch101tape@gmail.com>"]
edition = "2021"
description = "A single threaded closure and function scheduler"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
